Update and rename 18092017.md to 20092017.md

--- a/notes/20092017.md
+++ b/notes/20092017.md
@@ -31,3 +31,7 @@ lan sync/internet sync. (Tình thế với ít file)
 2. Sử dụng đồng bộ nào (rsync/rclone/ tự code để handle việc upload & download (Nếu trong trường hợp OpenStack Swift))
 3. Đồng bộ kiểu remote file system hay sử dụng OpenStack Swift. (Rclone có thể
    làm tốt với cả 2 trường hợp)
+   
+### Link etherpad:
+
+https://etherpad.openstack.org/p/lan-sync
